--- a/hw05/css/style.css
+++ b/hw05/css/style.css
@@ -7,6 +7,24 @@
 		color: white;
 }
 
+.kchart div{ /*Derricks Graph*/
+		font: 14px san-serif;
+		background-color: #7F0000;
+		text-align: right;
+		padding: 3px;
+		margin: 1px;
+		color: white;
+}
+
+.kchart2 div{  /*Rick's Graph*/
+		font: 14px san-serif;
+		background-color: steelblue;
+		text-align: right;
+		padding: 3px;
+		margin: 1px;
+		color: white;
+}
+
 .chart2 div{  /*Rick's Graph*/
 		font: 14px san-serif;
 		background-color: blue;
